Update lint-autofix workflow to use local action

--- a/.github/workflows/lint-autofix.yml
+++ b/.github/workflows/lint-autofix.yml
@@ -18,12 +18,18 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install dependencies
+      # demo依存（今回の検証用）
+      - name: Install demo dependencies
         run: |
           npm --prefix demo install
           ln -sfn demo/node_modules node_modules
 
+      # ★これが必要（Action依存を入れる）
+      - name: Install action dependencies
+        run: npm --prefix free-action install
+
+      # ★ローカルActionとして実行
       - name: Run Lint Autofix
-        uses: Sho-hei0101/lint-autofix-community/free-action@v1
+        uses: ./free-action
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
