--- a/free-action/package.json
+++ b/free-action/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "ncc build src/index.js -o dist --license licenses.txt",
+    "build": "ncc build src/index.js -o dist",
     "package": "npm run build"
   },
   "dependencies": {
