--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -26,6 +26,25 @@ jobs:
         uses: ./free-action
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Verify comment posted
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const tag = '<!-- lint-autofix-community -->';
+            const { owner, repo } = context.repo;
+            const issueNumber = context.payload.pull_request.number;
+            const comments = await github.paginate(github.rest.issues.listComments, {
+              owner,
+              repo,
+              issue_number: issueNumber,
+              per_page: 100,
+            });
+            const match = comments.find((comment) => comment.body?.includes(tag));
+            if (!match) {
+              core.setFailed('Expected lint autofix comment to be posted or updated.');
+            } else {
+              core.info(`Found comment: ${match.id}`);
+            }
       - name: Confirm diff produced
         run: |
           git diff --name-only
