Use local action for repo CI while keeping v1

--- a/.github/workflows/lint-autofix.yml
+++ b/.github/workflows/lint-autofix.yml
@@ -18,6 +18,13 @@ jobs:
           node-version: 20
 
       - name: Run Lint Autofix
+        if: ${{ github.repository == 'Sho-hei0101/lint-autofix-community' }}
+        uses: ./free-action
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run Lint Autofix (released)
+        if: ${{ github.repository != 'Sho-hei0101/lint-autofix-community' }}
         uses: Sho-hei0101/lint-autofix-community/free-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
