Prepare community action for distribution

--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -14,6 +14,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Build action dist
+        run: |
+          npm --prefix free-action run build
+          git diff --exit-code free-action/dist/index.js
       - name: Install demo dependencies
         run: |
           npm --prefix demo install
