--- a/free-action/package.json
+++ b/free-action/package.json
@@ -2,17 +2,13 @@
   "name": "lint-autofix-community-action",
   "version": "1.0.0",
   "description": "Community GitHub Action that suggests ESLint/Prettier fixes in PR comments.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "ncc build src/index.js -o dist",
+    "build": "node scripts/build.js",
     "package": "npm run build"
   },
-  "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/exec": "^1.1.1",
-    "@actions/github": "^6.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@vercel/ncc": "^0.38.1"
   }
