--- a/.github/workflows/lint-autofix.yml
+++ b/.github/workflows/lint-autofix.yml
@@ -16,6 +16,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
 
       - name: Run Lint Autofix
         if: ${{ github.repository == 'Sho-hei0101/lint-autofix-community' }}
