--- a/.github/workflows/lint-autofix.yml
+++ b/.github/workflows/lint-autofix.yml
@@ -23,11 +23,12 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-npm-${{ hashFiles('package.json') }}
+          key: ${{ runner.os }}-npm-${{ hashFiles('free-action/package.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
       - name: Install dependencies
         run: npm install
+        working-directory: free-action
 
       - name: Run Lint Autofix
         if: ${{ github.repository == 'Sho-hei0101/lint-autofix-community' }}
